Refine facial recognition (3-photo capture, liveness, 0.5 threshold) and fix profile edit role validation

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,6 +2,7 @@ twig:
     file_name_pattern: '*.twig'
     globals:
         cartService: '@App\Service\CartService'
+        recaptcha_site_key: '%env(RECAPTCHA_SITE_KEY)%'
 
 when@test:
     twig:
