--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=cffc5b5078b8b7f5defd42271bec6532
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/firmetna_new_db?serverVersion=8.0&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3307/firmetna_new_db?serverVersion=8.0&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -37,9 +37,16 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+# MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
+
+RECAPTCHA_SITE_KEY=6LeoN28sAAAAAP3EvNZ8TTcAn2ycOAu4wi9LJDmY
+RECAPTCHA_SECRET_KEY=6LeoN28sAAAAAOKM1NBwKjyUTX6-9rSbowVOHbri
 
 TWILIO_SID=ACbcb54bdcb3e7b17ccc861d781cc57a6d
 TWILIO_TOKEN=574037baf199aaf5af353eeb3c1ed1d9
 TWILIO_PHONE=+19124175429
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN="smtp://a51b79a5908f2f:d84f47a619eb77@sandbox.smtp.mailtrap.io:2525"
+###< symfony/google-mailer ###
