--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,3 +23,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Validator\ReCaptchaValidator:
+        arguments:
+            $reCaptchaSecret: '%env(RECAPTCHA_SECRET_KEY)%'
+        tags: [validator.constraint_validator]
