--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=cffc5b5078b8b7f5defd42271bec6532
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/firmetna_new_db?serverVersion=8.0&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/firmetna_new_db?serverVersion=10.4.32-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -39,3 +39,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> google/perspective-api ###
+PERSPECTIVE_API_KEY=AIzaSyAtM_TENVecixy8Cbcc5ImGSG099WQBgaY
+###< google/perspective-api ###
