feat: wire HuggingFaceService for AI description generation on events

--- a/.env
+++ b/.env
@@ -58,3 +58,7 @@ PERSPECTIVE_API_KEY=AIzaSyAtM_TENVecixy8Cbcc5ImGSG099WQBgaY
 WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
 WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 ###< knplabs/knp-snappy-bundle ###
+
+###> huggingface ###
+HUGGINGFACE_API_KEY=your_huggingface_api_key_here
+###< huggingface ###
