fix: wire PhpMailerEventService with SMTP env vars to resolve autowiring error

--- a/.env
+++ b/.env
@@ -62,3 +62,12 @@ WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 ###> huggingface ###
 HUGGINGFACE_API_KEY=your_huggingface_api_key_here
 ###< huggingface ###
+
+###> phpmailer ###
+PHPMAILER_HOST=sandbox.smtp.mailtrap.io
+PHPMAILER_PORT=2525
+PHPMAILER_USER=a51b79a5908f2f
+PHPMAILER_PASSWORD=d84f47a619eb77
+PHPMAILER_FROM_EMAIL=noreply@firmetna.com
+PHPMAILER_FROM_NAME=FIRMETNA
+###< phpmailer ###
