--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "knplabs/knp-paginator-bundle": "^6.10",
         "knplabs/knp-snappy-bundle": "*",
         "phpdocumentor/reflection-docblock": "5.2",
+        "phpmailer/phpmailer": "^7.0",
         "phpstan/phpdoc-parser": "^2.3",
         "symfony/asset": "6.4.*",
         "symfony/asset-mapper": "6.4.*",
