feat: configure Symfony Mailer DSN to use Gmail for password reset emails

--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN="smtp://a51b79a5908f2f:d84f47a619eb77@sandbox.smtp.mailtrap.io:2525"
+MAILER_DSN="smtp://ryhemoueslati00%40gmail.com:wxnhkhdqlxmmwoxm@smtp.gmail.com:587"
 ###< symfony/mailer ###
 
 RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
@@ -60,14 +60,14 @@ WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 ###< knplabs/knp-snappy-bundle ###
 
 ###> huggingface ###
-HUGGINGFACE_API_KEY=your_huggingface_api_key_here
+HUGGINGFACE_API_KEY=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
 ###< huggingface ###
 
 ###> phpmailer ###
-PHPMAILER_HOST=sandbox.smtp.mailtrap.io
-PHPMAILER_PORT=2525
-PHPMAILER_USER=a51b79a5908f2f
-PHPMAILER_PASSWORD=d84f47a619eb77
-PHPMAILER_FROM_EMAIL=noreply@firmetna.com
+PHPMAILER_HOST=smtp.gmail.com
+PHPMAILER_PORT=587
+PHPMAILER_USER=ryhemoueslati00@gmail.com
+PHPMAILER_PASSWORD=wxnhkhdqlxmmwoxm
+PHPMAILER_FROM_EMAIL=ryhemoueslati00@gmail.com
 PHPMAILER_FROM_NAME=FIRMETNA
 ###< phpmailer ###
