--- a/.env
+++ b/.env
@@ -71,3 +71,6 @@ PHPMAILER_PASSWORD=wxnhkhdqlxmmwoxm
 PHPMAILER_FROM_EMAIL=ryhemoueslati00@gmail.com
 PHPMAILER_FROM_NAME=FIRMETNA
 ###< phpmailer ###
+
+APP_ENV=dev
+APP_DEBUG=true
